Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectTextField.quorum
class Main
    Object o        
    action Main
        o = cast(Object, "text")
        output "passed"
    end
end