Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignObjectBoolean.quorum
Object o = cast(Object, true)